--- a/UserInterface/Views/Category/Index.cshtml
+++ b/UserInterface/Views/Category/Index.cshtml
@@ -17,6 +17,12 @@
         <th>Durum</th>
     </tr>
     <tr>
+        <td>1</td>
+        <td>hgh</td>
+        <td>hghg</td>
+        <td>hgh</td>
+    </tr>
+    <tr>
         <td>2</td>
         <td>hgh</td>
         <td>hghg</td>
