--- a/UserInterface/Views/Category/Index.cshtml
+++ b/UserInterface/Views/Category/Index.cshtml
@@ -2,12 +2,12 @@
 @{
     Layout = null;
 }
-
+<link href="~/Content/bootstrap.min.css" rel="stylesheet" />
 <!DOCTYPE html>
 
 <h3> MVC Blog Tablo - Kategori  </h3>        
 <br />
-<table>
+<table class="table table-bordered">
 
 
     <tr>
@@ -15,17 +15,38 @@
         <th>Kategori Adı</th>
         <th>Açıklama</th>
         <th>Durum</th>
+        <th>Güncelle</th>
     </tr>
     <tr>
         <td>1</td>
         <td>hgh</td>
         <td>hghg</td>
         <td>hgh</td>
+        <td><button class="btn btn-success"> Güncelle   </button></td>
     </tr>
     <tr>
         <td>2</td>
         <td>hgh</td>
         <td>hghg</td>
         <td>hgh</td>
+        <td><button class="btn btn-success"> Güncelle   </button></td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>hgh</td>
+        <td>hghg</td>
+        <td>hgh</td>
+        <td><button class="btn btn-success"> Güncelle   </button></td>
+    </tr>
+    <tr>
+        <td>2</td>
+        <td>hgh</td>
+        <td>hghg</td>
+        <td>hgh</td>
+        <td><button class="btn btn-success"> Güncelle   </button></td>
     </tr>
 </table>
+
+<button class="btn btn-info">Yeni Kategori    </button>
+<button class="btn btn-warning">Kategori Listesi    </button>
+<button class="btn btn-danger">Kategori Açıklamaları    </button>
