--- a/UserInterface/Views/AdminCategory/Index.cshtml
+++ b/UserInterface/Views/AdminCategory/Index.cshtml
@@ -5,7 +5,9 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-<br />
+<h2>Kategori Ekle</h2>
+
+
 <table class="table table-bordered">
     <tr>
         <th>#</th>
