--- a/UserInterface/Views/Heading/Index.cshtml
+++ b/UserInterface/Views/Heading/Index.cshtml
@@ -4,7 +4,11 @@
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_AdminLayout.cshtml";
 }
-@{ string color = ""; }
+@{ string color = "";
+    string checkStatus = "";
+    string checkColor = "";
+    string statusColor = "";
+}
 <!DOCTYPE html>
 <html>
 
@@ -14,7 +18,7 @@
         <div class="container-fluid">
             <div class="row mb-2">
                 <div class="col-sm-6">
-                    <h1>Projects</h1>
+                    <h1>Başlıklar</h1>
                 </div>
             </div>
         </div><!-- /.container-fluid -->
@@ -44,8 +48,11 @@
                             <th style="width: 20%">
                                 Başlık Adı
                             </th>
-                            <th style="width: 30%">
+                            <th style="width: 15%">
                                 Oluşturan Yazar
+                            </th>
+                            <th style="width: 10%">
+                                Durum
                             </th>
                             <th style="width: 8%" class="text-center">
                                 Kategori
@@ -69,6 +76,7 @@
                             {
                                 color = "badge badge-info";
                             }
+
                             <tr>
                                 <td>
                                     @item.HeadingID
@@ -91,6 +99,18 @@
                                         </li>
                                     </ul>
                                 </td>
+                                <td>
+                                    @switch (item.HeadingStatus)
+                                    {
+                                        case true:
+                                            statusColor = "badge bg-success";
+                                            break;
+                                        case false:
+                                            statusColor = "badge bg-danger";
+                                            break;
+                                    }
+                                    <span class="@statusColor">@item.HeadingStatus</span>
+                                </td>
                                 <td class="project-state">
                                     <span class="@color">@item.Category.CategoryName</span>
                                 </td>
@@ -100,15 +120,38 @@
                                         </i>
                                         Yazılar
                                     </a>
-                                    <a class="btn btn-info btn-sm" href="#">
+                                    <a class="btn btn-info btn-sm" href="/Heading/EditHeading/@item.HeadingID">
                                         <i class="fas fa-pencil-alt">
                                         </i>
                                         Düzenle
                                     </a>
-                                    <a class="btn btn-danger btn-sm" href="#">
+
+
+                                    @switch (item.HeadingStatus)
+                                    {
+                                        case true:
+                                            checkColor = "badge bg-danger";
+                                            break;
+                                        case false:
+                                            checkColor = "badge bg-success";
+                                            break;
+                                    }
+                                    <a class="@checkColor" href="/Heading/DeleteHeading/@item.HeadingID">
                                         <i class="fas fa-trash">
                                         </i>
-                                        Sil
+                                        @if (item.HeadingStatus == true)
+                                        {
+
+                                            checkStatus = "Pasif Yap";
+                                        }
+                                        else
+                                        {
+
+                                            checkStatus = "Aktif Yap";
+                                        }
+                                        @checkStatus
+
+
                                     </a>
                                 </td>
                             </tr>
